// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Image renders <img> 1`] = `
<img
  alt="alt"
  loading="lazy"
  src="src"
/>
`;

exports[`Image renders GatsbyImage 1`] = `
<img
  alt="alt"
  image={true}
  loading="lazy"
  src="image"
/>
`;
